# zoiko_ai_logistics

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.backend  EXECUTION_GUIDE.md  Makefile  README.md  SCHEMA_AUDIT.md  ZOIKO_TECHNICAL_DOCUMENT.md  _fix_flags.py  _load_env.py  alembic.ini  backend_err.txt  check_db.py  check_outbox.py  clear_demo_data.py  conftest.py  dashboard.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  fix_tokens.py  launch.bat  list_tables.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  restart_backend.ps1  seed_all_slices.py  seed_contract_rates.py  seed_users.py  setup.bat  start.bat  start.sh  start_phase2.py  verify.sh  watchdog.ps1  (+1 more)
backend/governance/: demo_phase3.py  paths.py  pyproject.toml
backend/governance/services/api_gateway/: auth.py  models.py
backend/governance/services/evidence_svc/: handler.py  models.py
backend/governance/services/reasoning_svc/: handler.py  models.py  tools.py
backend/governance/tests/: test_reasoning.py  test_token.py
backend/slices/sc-001-freight-invoice-overcharge/spine/gateway/: openapi.yaml  paths.py  pyproject.toml
backend/slices/sc-001-freight-invoice-overcharge/spine/gateway/shared/: db.py  email_sender.py
phase-1/: README.md  demo_connected.py  demo_phase1.py  pyproject.toml  requirements.txt
phase-1/kafka/: consumer.py  mock_kafka.py  producer.py
phase-1/middleware/oidc/: middleware.py  token_verifier.py
phase-1/middleware/opa/: client.py  middleware.py
phase-1/opa/policies/: freight_dispute.rego
phase-1/tests/: test_kafka_mock.py  test_oidc_middleware.py  test_opa_client.py
(+604 files in other folders)
