[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "zoiko-phase1"
version     = "1.0.0"
description = "Phase 1 — KMS, OIDC, Kafka, OPA for Zoiko AI Logistics"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "fastapi>=0.111",
    "starlette>=0.37",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "httpx>=0.27",       # for FastAPI test client
    "pytest-asyncio",
]

[tool.pytest.ini_options]
testpaths   = ["tests", "packages/zoiko-kms/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["middleware", "kafka", "packages/zoiko-kms/zoiko_kms"]
