[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "zoiko-phase3"
version     = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "fastapi",
    "httpx",
    "python-jose[cryptography]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
